tigervnc (1.7.0+dfsg-9~RC1) UNRELEASED; urgency=high

  [ Joachim Falk ]
  * Fixed typo in tigervncserver wrapper script (Closes: #881276).
  * In /etc/X11/Xvnc-session, $SHELL should be quoted (Closes: #866061).
  * Updated Vcs-* fields in control to use new gitlab at salsa.debian.org.

  [ Philipp Wolski ]
  * Added rfbport to supported commandline arguments for
    tightvncserver wrapper (closes: #867175)

 -- Joachim Falk <joachim.falk@gmx.de>  Wed, 02 May 2018 20:56:28 +0200

tigervnc (1.7.0+dfsg-8) unstable; urgency=high

  [ Joachim Falk ]
  * Applied patch from Chris Lamb to enable reproducible builds
    for TigerVNC (Closes: #865753).

  [ Ola Lundqvist ]
  * Build fix to move lib to usr/lib. A bit tricky case. Closes: #880308.

 -- Ola Lundqvist <opal@debian.org>  Mon, 04 Dec 2017 10:39:19 +0100

tigervnc (1.7.0+dfsg-7) unstable; urgency=high

  [ Joachim Falk ]
  * Fixed the following security vulnerabilities (Closes: #859259):
  - Fix SSecurityVeNCrypt.cxx; SSecurityVeNCrypt::SSecurityVeNCrypt.
    An unauthenticated client can cause a small memory leak in the server.
    (CVE-2017-7392)
  - Fix VNCSConnectionST.cxx VNCSConnectionST::fence. An authenticated client
    can cause a double free, leading to denial of service or potentially code
    execution. (CVE-2017-7393)
  - Fix SSecurityPlain.cxx SSecurityPlain::processMsg. An unauthenticated
    users can crash the server by sending long usernames. (CVE-2017-7394)
  - Fix SMsgReader.cxx SMsgReader::readClientCutText. An authenticated client
    can crash the server by causing an integer overflow. (CVE-2017-7395)
  - Fix CConnection.cxx CConnection::CConnection. An unauthenticated client
    can cause a small memory leak in the server. (CVE-2017-7396)
  * The tigervncserver wrapper script gives up and kills the server it
    just started if it doesn't have its VNC-TCP and X11-unix sockets up and
    running within a second. However, if a machine is a bit bogged down,